(fix) check mark alignment

--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -239,7 +239,7 @@ main, .footer {
                     align-items: center;
                     justify-content: center;
                     position: absolute;
-                    top: 13px;
+                    top: 11px;
                     transform: translate(-#{$spacing-24}, 0);
                 }
     
